# BasicLibrary.PY

./: .env.default  .gitignore  .pylintrc  MANIFEST.in  README.md  _ProjectHelper.py  _projectConfig.ini  _projectHelper.py  index.txt  main.py  publish.py  pyproject.toml  requirements.txt  setup.py
.test/: 工作簿1.xlsx  工作簿2.xlsx  工作簿22.xlsx  工作簿5.xlsx
BasicLibrary/: .README.md  README.md  __init__.py  configHelper.py  enums.py  projectHelper.py
BasicLibrary.PY.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
HilandBasicLibrary/: ConfigHelper.py  ProjectHelper.py  __ProjectConfig.ini  __ProjectHelper.py  readme.txt
HilandBasicLibrary.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
hilandBasicLibrary/: ConfigHelper.py  ProjectHelper.py  README.md  __ProjectConfig.ini  __ProjectHelper.py  __init__.py  __projectConfig.ini  __projectHelper.py  configHelper.py  enums.py  projectHelper.py
test/: CollectionHelper_test.py  ConfigHelper_test.py  ConsoleHelper_test.py  DatabaseClient_test.py  DatabaseHelper_test.py  DatabaseMisc_test.py  DateTimeHelper_test.py  DictHelper_test.py  ListHelper_test.py  ObjectHelper_test.py  PathHelper_test.py  ProjectHelper_test.py  ReflectHelper_test.py  StockHelper_test.py  StringHelper_test.py  index.py  index_test.py  main.py  test_ConsoleHelper.py  test_DatabaseClient.py  test_DatabaseDDL.py  test_DatabaseHelper.py  test_DatabaseMisc.py  test_DatabaseUnitTest.py  test_DateTimeHelper.py  test_DictHelper.py  test_ObjectHelper.py  test_PathHelper.py  test_ProjectHelper.py  test_StockHelper.py  test_StringHelper.py  test_container.py  test_index.py  (+1 more)
(+285 files in other folders)
