[tool.poetry]
name = "BasicLibrary.PY"
version = "0.6.4"
description = ""
authors = ["解大劦 <9727005@qq.com>"]
readme = "README.md"
packages = [{include = "BasicLibrary"}]

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.2.0"
pandas = "^2.2.1"


[tool.poetry.dev-dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
