[tool.poetry]
name = "BasicLibrary.PY"
version = "0.6.7"
description = ""
authors = ["解大劦 <9727005@qq.com>"]
readme = "README.md"
packages = [{include = "BasicLibrary"}]

[tool.poetry.dependencies]
python = "^3.12"
pillow = "^10.2.0"
pandas = "^2.2.1"
sxtwl = "^2.0.6"
chardet = "^5.2.0"


[tool.poetry.dev-dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
